[package]
name = "price-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.10.29"
borsh = "0.10.3"
thiserror = "1.0.31"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

[lib]
crate-type = ["cdylib", "lib"]
